--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ nav ul li a, .brand {
     color: white;
     display: block;
     padding: 1rem;
-    
+    cursor: pointer;
 }
 
 nav ul li a:hover {background-color: #4f5b62;}
@@ -70,6 +70,29 @@ nav ul li a:hover {background-color: #4f5b62;}
     max-height: 100%;
     object-fit: cover;
     object-position: center;
+}
+
+#welcome-section .img-container img {
+    animation-name: pops;
+    animation-duration: 2.5s;
+    animation-delay: .5s;
+    animation-fill-mode: forwards;
+    visibility: hidden;
+}
+
+@keyframes pops {
+    0% {
+        visibility: visible;
+        width: 0%;
+        transform: rotate(120deg);
+    }
+
+    50% {transform: rotate(-50deg);}
+
+    100% {
+        width: 100%;
+        visibility: visible;
+    }
 }
 
 @media (min-width: 800px) {
@@ -159,18 +182,21 @@ nav ul li a:hover {background-color: #4f5b62;}
 
 #contact h2, p {margin: 0;}
 
-#contact .contact-links {
-    margin-top: 1rem;
-}
+#contact .contact-links {margin-top: 1rem;}
 
 #contact .contact-links  a {
     text-decoration: none;
     color: white;
     padding: .5rem;
-    transition: all .2s
+    transition: all .2s;
+    font-size: 1.3rem;
+    transition: all .5s;
 }
 
-#contact .contact-links  a:hover {font-size: 1.1rem;}
+#contact .contact-links  a:hover {
+    font-size: 1.5rem;
+    text-shadow: 0 -5px 5px rgba(0, 0, 0, 0.5);
+}
 
 footer {
     padding: 1rem;
